// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CatsList it should render the cat list based on gender Female 1`] = `
<DocumentFragment>
  <div>
    <div>
      Garfield
    </div>
    <div>
      Tabby
    </div>
    <div>
      Simba
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CatsList it should render the cat list based on gender Male 1`] = `
<DocumentFragment>
  <div>
    <div>
      Garfield
    </div>
    <div>
      Tom
    </div>
    <div>
      Max
    </div>
    <div>
      Jim
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CatsList it should render the component 1`] = `
<DocumentFragment>
  <div>
    <div>
      Garfield
    </div>
    <div>
      Tom
    </div>
    <div>
      Max
    </div>
    <div>
      Jim
    </div>
  </div>
</DocumentFragment>
`;
